docs: type safe initialState

--- a/docs/api/createSlice.mdx
+++ b/docs/api/createSlice.mdx
@@ -25,7 +25,7 @@ interface CounterState {
   value: number
 }
 
-const initialState = { value: 0 } as CounterState
+const initialState: CounterState = { value: 0 }
 
 const counterSlice = createSlice({
   name: 'counter',
