docs: add satisfies keyword

--- a/docs/api/createSlice.mdx
+++ b/docs/api/createSlice.mdx
@@ -25,7 +25,7 @@ interface CounterState {
   value: number
 }
 
-const initialState: CounterState = { value: 0 }
+const initialState = { value: 0 } satisfies CounterState as CounterState
 
 const counterSlice = createSlice({
   name: 'counter',
