docs: add satisfies keyword with type assertion

--- a/docs/tutorials/quick-start.mdx
+++ b/docs/tutorials/quick-start.mdx
@@ -117,9 +117,7 @@ export interface CounterState {
   value: number
 }
 
-const initialState: CounterState = {
-  value: 0,
-}
+const initialState = { value: 0 } satisfies CounterState as CounterState
 
 export const counterSlice = createSlice({
   name: 'counter',
