Revert "docs: add satisfies keyword with type assertion (#3623)"
This reverts commit e45425128d3c3168c7daa71e5f38f5151234cb8d.

--- a/docs/tutorials/quick-start.mdx
+++ b/docs/tutorials/quick-start.mdx
@@ -117,7 +117,9 @@ export interface CounterState {
   value: number
 }
 
-const initialState = { value: 0 } satisfies CounterState as CounterState
+const initialState: CounterState = {
+  value: 0,
+}
 
 export const counterSlice = createSlice({
   name: 'counter',
