--- a/docs/api/configureStore.mdx
+++ b/docs/api/configureStore.mdx
@@ -100,17 +100,14 @@ If it is an object of slice reducers, like `{users : usersReducer, posts : posts
 
 ### `middleware`
 
-An optional array of Redux middleware functions, or a callback to customise the array of middleware.
+A callback which will receive `getDefaultMiddleware` as its argument,
+and should return a middleware array.
 
-If this option is provided, it should contain all the middleware functions you
+If this option is provided, it should return all the middleware functions you
 want added to the store. `configureStore` will automatically pass those to `applyMiddleware`.
 
 If not provided, `configureStore` will call `getDefaultMiddleware` and use the
 array of middleware functions it returns.
-
-Where you wish to add onto or customize the default middleware,
-you may pass a callback function that will receive `getDefaultMiddleware` as its argument,
-and should return a middleware array.
 
 For more details on how the `middleware` parameter works and the list of middleware that are added by default, see the
 [`getDefaultMiddleware` docs page](./getDefaultMiddleware.mdx).
@@ -123,7 +120,7 @@ import { configureStore, Tuple } from '@reduxjs/toolkit'
 
 configureStore({
   reducer: rootReducer,
-  middleware: new Tuple(additionalMiddleware, logger),
+  middleware: () => new Tuple(additionalMiddleware, logger),
 })
 ```
 
@@ -178,11 +175,6 @@ If you provide an array, this `applyMiddleware` enhancer will _not_ be used.
 `configureStore` will warn in console if any middleware are provided (or left as default) but not included in the final list of enhancers.
 
 ```ts no-transpile
-// warns - middleware left as default but not included in final enhancers
-configureStore({
-  reducer,
-  enhancers: [offline(offlineConfig)],
-})
 // warns - middleware customised but not included in final enhancers
 configureStore({
   reducer,
@@ -199,8 +191,8 @@ configureStore({
 // also allowed
 configureStore({
   reducer,
-  middleware: [],
-  enhancers: [offline(offlineConfig)],
+  middleware: () => [],
+  enhancers: ()  => [offline(offlineConfig)],
 })
 ```
 
@@ -209,20 +201,22 @@ configureStore({
 :::note Tuple
 Typescript users are required to use a `Tuple` instance (if not using a `getDefaultEnhancer` result, which is already a `Tuple`), for better inference.
 
+```
 import { configureStore, Tuple } from '@reduxjs/toolkit'
 
 configureStore({
 reducer: rootReducer,
-enhancers: new Tuple(offline),
+enhancers: () => new Tuple(offline),
 })
 
-````
+```
 
 Javascript-only users are free to use a plain array if preferred.
 
 :::
 
 ## Usage
+
 ### Basic Example
 
 ```ts
@@ -238,7 +232,7 @@ import rootReducer from './reducers'
 
 const store = configureStore({ reducer: rootReducer })
 // The store now has redux-thunk added and the Redux DevTools Extension is turned on
-````
+```
 
 ### Full Example
 
