--- a/docs/rtk-query/usage/usage-without-react-hooks.mdx
+++ b/docs/rtk-query/usage/usage-without-react-hooks.mdx
@@ -23,7 +23,10 @@ Cache subscriptions are used to tell RTK Query that it needs to fetch data for a
 With React hooks, this behavior is instead handled within [`useQuery`](../api/created-api/hooks.mdx#usequery), [`useQuerySubscription`](../api/created-api/hooks.mdx#usequerysubscription), [`useLazyQuery`](../api/created-api/hooks.mdx#uselazyquery), and [`useLazyQuerySubscription`](../api/created-api/hooks.mdx#uselazyquerysubscription).
 
 ```ts title="Subscribing to cached data" no-transpile
-dispatch(api.endpoints.getPosts.initiate())
+const subscription = dispatch(api.endpoints.getPosts.initiate())
+// The subscription contains the same methods as you would find in the hook
+// ...subscription.refetch();
+// ...subscription.isLoading;
 ```
 
 ## Removing a subscription
